codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭───────────────────────────────────────╮
│ ⣰⣭⣆ Codex (v20260721.2.0)         │
│                                       │
│ model:       gpt-5   /model to change │
│ directory:   /tmp/project             │
╰───────────────────────────────────────╯

  Tip: Model just became available
